[project]
name = "code-review-env"
version = "1.0.0"
description = "Code review environment for evaluating LLM agents"
requires-python = ">=3.10"
dependencies = [
    "openenv>=0.2.0",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "requests",
]

[project.scripts]
server = "server.app:main"
